--- a/install/extras/developers/css/cerb.css/layout/cerb-styles.scss
+++ b/install/extras/developers/css/cerb.css/layout/cerb-styles.scss
@@ -1621,7 +1621,7 @@ UL.cerb-popupmenu {
 	}
 
 	PRE > CODE {
-		overflow-x: scroll;
+		overflow-x: auto;
 	}
 
 	BLOCKQUOTE {
@@ -1732,7 +1732,7 @@ DIV.emailBodyHtml {
 
 	PRE > CODE {
 		display: block;
-		overflow-x: scroll;
+		overflow-x: auto;
 		border: 1px solid var(--cerb-color-background-contrast-230);
 		background-color: var(--cerb-color-email-code);
 		padding: 10px;
@@ -1800,7 +1800,7 @@ DIV.emailBodyHtmlLight {
 
 	PRE > CODE {
 		display: block;
-		overflow-x: scroll;
+		overflow-x: auto;
 		border: 1px solid rgb(230,230,230);
 		background-color: rgb(246,242,240);
 		padding: 10px;
@@ -1863,7 +1863,7 @@ DIV.commentBodyHtml {
 	PRE > CODE {
 		clear: both;
 		display: block;
-		overflow-x: scroll;
+		overflow-x: auto;
 		border: 1px solid var(--cerb-color-background-contrast-230);
 		background-color: var(--cerb-color-email-code);
 		padding: 10px;
